--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="YP Black"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="150" id="x8L-6k-BMP" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="150" id="x8L-6k-BMP" customClass="ImagesListCell" customModule="ImageFeed">
                                         <rect key="frame" x="0.0" y="50" width="361" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x8L-6k-BMP" id="cEZ-2l-VuA">
@@ -30,7 +30,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="ma9-Jb-HIw" userLabel="Cell Image">
-                                                    <rect key="frame" x="0.0" y="0.0" width="361" height="150"/>
+                                                    <rect key="frame" x="16" y="4" width="329" height="146"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="16"/>
@@ -39,30 +39,35 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" text="27 Августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TtQ-rQ-CIR" userLabel="Date Label">
-                                                    <rect key="frame" x="8" y="121" width="130" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="24" y="126.33333333333333" width="103" height="15.666666666666671"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="add-MI-qXN" userLabel="Like Button">
-                                                    <rect key="frame" x="319" y="0.0" width="42" height="42"/>
+                                                    <rect key="frame" x="303" y="4" width="42" height="42"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="1" maxY="0.0"/>
                                                     <state key="normal" image="Active"/>
                                                 </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="ma9-Jb-HIw" secondAttribute="bottom" id="3mI-je-x6W"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TtQ-rQ-CIR" secondAttribute="trailing" constant="20" symbolic="YES" id="73W-mH-kWx"/>
+                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="TtQ-rQ-CIR" secondAttribute="trailing" constant="8" id="73W-mH-kWx"/>
                                                 <constraint firstAttribute="bottom" secondItem="TtQ-rQ-CIR" secondAttribute="bottom" constant="8" id="C4m-zi-kbZ"/>
-                                                <constraint firstAttribute="trailing" secondItem="add-MI-qXN" secondAttribute="trailing" id="S9N-Cp-GJE"/>
-                                                <constraint firstItem="TtQ-rQ-CIR" firstAttribute="leading" secondItem="cEZ-2l-VuA" secondAttribute="leading" constant="8" id="XRW-Vx-xRV"/>
-                                                <constraint firstItem="add-MI-qXN" firstAttribute="top" secondItem="cEZ-2l-VuA" secondAttribute="top" id="bFd-am-VfU"/>
-                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="top" secondItem="cEZ-2l-VuA" secondAttribute="top" id="fu5-6c-2Tp"/>
-                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="leading" secondItem="cEZ-2l-VuA" secondAttribute="leading" id="nJ2-aS-ti3"/>
-                                                <constraint firstAttribute="trailing" secondItem="ma9-Jb-HIw" secondAttribute="trailing" id="tdu-gO-V3P"/>
+                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="trailing" secondItem="add-MI-qXN" secondAttribute="trailing" id="S9N-Cp-GJE"/>
+                                                <constraint firstItem="TtQ-rQ-CIR" firstAttribute="leading" secondItem="ma9-Jb-HIw" secondAttribute="leading" constant="8" id="XRW-Vx-xRV"/>
+                                                <constraint firstItem="add-MI-qXN" firstAttribute="top" secondItem="ma9-Jb-HIw" secondAttribute="top" id="bFd-am-VfU"/>
+                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="top" secondItem="cEZ-2l-VuA" secondAttribute="top" constant="4" id="fu5-6c-2Tp"/>
+                                                <constraint firstItem="ma9-Jb-HIw" firstAttribute="leading" secondItem="cEZ-2l-VuA" secondAttribute="leading" constant="16" id="nJ2-aS-ti3"/>
+                                                <constraint firstAttribute="trailing" secondItem="ma9-Jb-HIw" secondAttribute="trailing" constant="16" id="tdu-gO-V3P"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" name="YP Black"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="ma9-Jb-HIw" id="54S-6g-4XQ"/>
+                                            <outlet property="dateLabel" destination="TtQ-rQ-CIR" id="JA1-zE-OJY"/>
+                                            <outlet property="likeButton" destination="add-MI-qXN" id="ptQ-I2-JxU"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -80,7 +85,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="-8" y="51"/>
         </scene>
     </scenes>
     <resources>
