--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -18,18 +18,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="UXO-Ly-anu">
-                                <rect key="frame" x="16" y="59" width="361" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" name="YP Black"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="150" id="x8L-6k-BMP" customClass="ImagesListCell" customModule="ImageFeed">
-                                        <rect key="frame" x="0.0" y="50" width="361" height="150"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x8L-6k-BMP" id="cEZ-2l-VuA">
-                                            <rect key="frame" x="0.0" y="0.0" width="361" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="ma9-Jb-HIw" userLabel="Cell Image">
-                                                    <rect key="frame" x="16" y="4" width="329" height="142"/>
+                                                    <rect key="frame" x="16" y="4" width="361" height="142"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                             <integer key="value" value="16"/>
@@ -44,7 +44,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="add-MI-qXN" userLabel="Like Button">
-                                                    <rect key="frame" x="303" y="4" width="42" height="42"/>
+                                                    <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="1" maxY="0.0"/>
                                                     <state key="normal" image="Active"/>
                                                 </button>
@@ -78,10 +78,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="UXO-Ly-anu" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" id="4Yn-V0-pvg"/>
-                            <constraint firstItem="UXO-Ly-anu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="WEV-6v-vhE"/>
-                            <constraint firstItem="UXO-Ly-anu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ZcM-7H-a4F"/>
-                            <constraint firstItem="UXO-Ly-anu" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="qyP-Bn-pPn"/>
+                            <constraint firstAttribute="bottom" secondItem="UXO-Ly-anu" secondAttribute="bottom" id="4Z6-ss-ZkU"/>
+                            <constraint firstItem="UXO-Ly-anu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SEX-Bd-wHn"/>
+                            <constraint firstItem="UXO-Ly-anu" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fDP-Bd-7Bi"/>
+                            <constraint firstAttribute="trailing" secondItem="UXO-Ly-anu" secondAttribute="trailing" id="qtR-QM-dx4"/>
                         </constraints>
                     </view>
                     <connections>
@@ -90,7 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8" y="51"/>
+            <point key="canvasLocation" x="-8.3969465648854964" y="50.70422535211268"/>
         </scene>
     </scenes>
     <resources>
