--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -126,10 +126,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KhZ-iz-kmC">
-                                <rect key="frame" x="308.5" y="76" width="48.5" height="36"/>
+                                <rect key="frame" x="337" y="76" width="20" height="22"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button" image="ipad.and.arrow.forward"/>
-                                <buttonConfiguration key="configuration" style="plain" image="ipad.and.arrow.forward" title=" "/>
+                                <state key="normal" image="ipad.and.arrow.forward"/>
                                 <connections>
                                     <action selector="signOut:" destination="Kbm-9l-HCT" eventType="touchUpInside" id="1lR-dI-901"/>
                                 </connections>
